--- a/static/css/styles-light.css
+++ b/static/css/styles-light.css
@@ -385,18 +385,16 @@ table thead {
 
 blockquote {
   margin: 1em;
-  border-left: solid 0.1em #cecece;
-  padding: 0.5em 2em;
+  padding: 1em;
   position: relative;
   background-color: #efefef;
-  box-shadow: 0 -1px 0 #bbbbbb inset;
 }
 
 blockquote::before {
   content: "\f10d";
   font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  font-size: 3em;
+  font-weight: 600;
+  font-size: 1.5em;
   color: rgba(192, 192, 192, 0.3);
   position: absolute;
   left: 6px;
