--- a/static/css/styles-light.css
+++ b/static/css/styles-light.css
@@ -6,6 +6,10 @@ body {
   color: #333333;
 }
 
+p {
+  text-align: justify;
+}
+
 h1,
 h2,
 h3,
@@ -264,7 +268,7 @@ width: 100%;
 
 a {
   color: #666666;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 .image, figure img, img {
