--- a/static/css/styles-dark.css
+++ b/static/css/styles-dark.css
@@ -3,12 +3,16 @@ body {
   padding: 0;
   overflow-x: hidden;
   font-family: "Roboto Slab", serif;
-  color: #ffffff;
+  color: #efefef;
   background: #2a2829;
 }
 
 p {
   text-align: justify;
+}
+
+strong {
+  color: #ffffff
 }
 
 h1,
