--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,13 +7,15 @@
     {{ range $index, $page := $paginator.Pages }}
 
     <li {{if eq $index 0}}class="first" {{end}}>
-      <h1><a href="{{ $page.Permalink }}" title="{{ $page.Title }}">{{ .Title }}</a></h1>
-      {{ partial "aside" . }}
-      {{ partial "featured_image" .}}
-      <p>{{ .Summary }}</p>
-      {{ if .Truncated }}
-      <a href="{{ .RelPermalink }}">{{ T "readMore" }}</a>
-      {{ end }}
+      <article>
+        <h1><a href="{{ $page.Permalink }}" title="{{ $page.Title }}">{{ .Title }}</a></h1>
+        {{ partial "aside" . }}
+        {{ partial "featured_image" .}}
+        <p>{{ .Summary }}</p>
+        {{ if .Truncated }}
+        <a href="{{ .RelPermalink }}">{{ T "readMore" }}</a>
+        {{ end }}
+      </article>
     </li>
     {{ end }}
   </ul>
