--- a/static/css/styles-dark.css
+++ b/static/css/styles-dark.css
@@ -411,26 +411,14 @@ table thead {
 }
 
 blockquote {
-  margin: 1em;
+  margin: 0;
   padding: 1em;
-  position: relative;
+  border-left: 4px solid;
   background-color: #3e3b3c;
-}
-
-blockquote::before {
-  content: "\f10d";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 600;
-  font-size: 1.5em;
-  color: rgba(192, 192, 192, 0.3);
-  position: absolute;
-  left: 6px;
-  top: 0;
 }
 
 @media only screen and (max-width: 800px) {
   blockquote {
-    margin: 1em 0;
     padding: 0.5em;
   }
 }
