Add margins for parapgraphs in the article

--- a/static/css/styles-dark.css
+++ b/static/css/styles-dark.css
@@ -12,6 +12,11 @@ p {
   text-align: justify;
 }
 
+#container main article h2,
+#container main article h3 {
+  margin-top: 60px;
+}
+
 strong {
   color: #ffffff;
 }
