--- a/static/css/styles-light.css
+++ b/static/css/styles-light.css
@@ -11,6 +11,11 @@ p {
   text-align: justify;
 }
 
+#container main article h2,
+#container main article h3 {
+  margin-top: 60px;
+}
+
 #container {
   margin: 0;
   padding: 0;
